--- a/kernal/stock_base.html
+++ b/kernal/stock_base.html
@@ -423,7 +423,7 @@
     }
 {% endblock %}		
 
-    $("#confirm").click(function(){
+function send_command(){
 		{% block ajaxCheckBeforeSend %}
         
 		var msg = '';
@@ -440,7 +440,14 @@
 		
 		$("#sales").submit();
 		
-    });
+    }
+
+$("#confirm").click(send_command);    
+    
+$("#amount_tendered").keydown(function(event){
+        if(event.keyCode != '13'){ return; }
+        send_command();
+});
 
 {% block extendJavascript %}
 {% endblock %}	
