--- a/kernal/sales.html
+++ b/kernal/sales.html
@@ -26,6 +26,7 @@
 			 <li><a href="/deposit/add/">Deposit</a></li>
              <li><a href="/service/add/">Service</a></li>
              <li><a href="/repair/add/">Repair</a></li>
+             <li><a href="/salary/add/">Cash out</a></li>
          </ol>
       </li>
       <li>Bills
@@ -36,6 +37,7 @@
             <li><a href="/search/deposit/">Deposit</a></li>
             <li><a href="/search/service/">Service</a></li>
             <li><a href="/search/repair/">Repair</a></li>
+            <li><a href="/search/salary/">Cash out</a></li>
          </ol>
       </li>	  
    </ol>
