--- a/kernal/inventory_base.html
+++ b/kernal/inventory_base.html
@@ -12,6 +12,9 @@
         </div>  
 {% endblock %}
 
+{% block foc_algo %}
+{% endblock %} 
+
 {% block mode_form %}
 		  <div id="error_msg">{{msg}}</div>
           <div id="mode_form">
