--- a/kernal/stock_take.html
+++ b/kernal/stock_take.html
@@ -43,11 +43,10 @@
             <div class="address">{{company.address}}</div>
             <div class="contect"><span>TEL: {{company.phone_office}}</span><span> FAX: {{company.fax}} </span><span>EMAIL: {{company.email}}</span></div>
             <p/>
-            <hr/>
+            <hr style="border-bottom: double 4px black; margin-top: 6em" />
         </div>
       
-        <div id="page_title" style="margin-bottom:8px;"><h1>STOCK BALANCE</h1>
-        </div>  
+        <div id="page_title" style="margin-bottom:8px; text-align: center"><h1>STOCK BALANCE</h1></div>  
         <div id="page_subtitle" style="margin-bottom:8px;text-align: right;font-weight: bolder; font-size: 10pt">{{dateRange}}</div>  
         <div id="table_holder">  	
           <table class="tablesorter report" id="sortable_table">  		
