--- a/kernal/counter_list.html
+++ b/kernal/counter_list.html
@@ -31,6 +31,10 @@
                 </div>
 
                 <div class="span-3">
+                    Current Amount
+                </div>                
+                
+                <div class="span-3">
                     Creater
                 </div>
                 <div class="span-3">
@@ -51,6 +55,10 @@
                     {{product.initail_amount}}
                 </div>
 
+                <div class="span-3" id="{{product.pk}}_current_amount">
+                    0
+                </div>                
+                
                 <div class="span-3">
                     {{product.user.username}}
                 </div>
@@ -58,6 +66,17 @@
                     <input type="submit" value="close" id="close"/>
                 </div>				
             </div>
+            <script type="text/javascript">
+                        $.ajax({
+                            url: "/counter/amount/{{product.pk}}",
+                            type: "GET",
+                            success: function(data){  
+                                $('#{{product.pk}}_current_amount').html(data)
+                            },
+                            error: function(data){},
+                            complete: function(data){},
+                        });    
+            </script>            
     {% endfor %}
 	            </form>
             </div>				
