--- a/kernal/sales_base.html
+++ b/kernal/sales_base.html
@@ -11,6 +11,10 @@
         </div>  
 {% endblock %}
 
+{% block foc_algo %}
+
+{% endblock %}  
+
 {% block mode_form %}
           <div id="mode_form">
             <span>Register Mode
