--- a/branches/refactory-1.0/kernal/product_list.html
+++ b/branches/refactory-1.0/kernal/product_list.html
@@ -155,7 +155,7 @@
         row = ""+
                 "<div class='span-24' id=\""+pk+"\">"+
                 "<div class='span-5'><a href='#' id='removeItem' onclick=\"removeItem('"+pk+"')\"><img src='/static/images/delete.png' /></a> "+
-                ""+data.fields.name +""+"</div>"+    <!-- [<span id=\""+pk+"_stockCount\"></span> in stock]</td>  for batch sales only-->
+                "<a href='/product/trace/"+data.pk+"'>"+data.fields.name +""+"</a></div>"+    <!-- [<span id=\""+pk+"_stockCount\"></span> in stock]</td>  for batch sales only-->
                 "<div class='span-3'>"+data.fields.category+"</div>"+ 
                 "<div class='span-3'>"+data.fields.brand+"</div>"+   
                 "<div class='span-3'>"+data.fields.type+"</div>"+  
