--- a/kernal/stock.html
+++ b/kernal/stock.html
@@ -23,9 +23,10 @@
          <ol>
             <li><a href="/inventory/list/">Receiving Stock</a></li>
             <li><a href="/report/stocktake/filter/">Stock Take</a></li>
+            <!--
             <li><a href="/report/newhp_stock/filter/">New Hp</a></li>
             <li><a href="/report/2ndhp_stock/filter/">2nd Hp</a></li>
-            <li><a href="/report/pawning_stock/filter/">Pawning</a></li>
+            <li><a href="/report/pawning_stock/filter/">Pawning</a></li>-->
 			<li><a href="/stock/adjust/">Stock Adjust</a></li>
             <li><a href="/report/inventory/filter/">Inventory Receipt Report</a></li>
 			<li><a href="/report/simpack/filter/">SimPack</a></li>
