--- a/kernal/report.html
+++ b/kernal/report.html
@@ -31,9 +31,9 @@
             <li><a href="/sales/cash/filter/"> Cash Sales</a></li>
             <li><a href="/sales/invoice/filter/"> Invoice and Delivery Orders</a></li>
             <li><a href="/sales/items/filter/"> Item Sales Summary</a></li>
-          <!--  <li><a href="/report/newhp_sales/filter/">New Hp Sales</a></li>
+            <li><a href="/report/newhp_sales/filter/">New Hp Sales</a></li>
             <li><a href="/report/2ndhp_sales/filter/">2nd Hp Sales</a></li>
-            <li><a href="/report/pawning_sales/filter/">Pawning Sales</a></li> -->
+            <li><a href="/report/pawning_sales/filter/">Pawning Sales</a></li>
          </ol>
       </li>      
       <li>Return Report
@@ -54,7 +54,6 @@
             
          </ol>
       </li>   
-      <!--
       <li>Commision Report
          <ol>
             <li><a href="/report/commission/newhp/filter/">New Handphone</a></li>
@@ -63,7 +62,7 @@
             <li><a href="/report/commission/acc/filter/">Accessories</a></li>
             
          </ol>
-      </li>       -->   
+      </li>          
    </ol>
 </div>
 </div>
