--- a/kernal/inventory_base.html
+++ b/kernal/inventory_base.html
@@ -24,8 +24,9 @@
               </option>  			  
               <option value="warranty">Warranty
               </option>
+<!--              
               <option value="pawning">Pawning
-              </option>                
+              </option>                -->
             </select>
           </div>   
 {% endblock %}
