--- a/kernal/sales.html
+++ b/kernal/sales.html
@@ -24,21 +24,25 @@
             <li><a href="/sales/list/">Cash Sale</a></li>
 			<li><a href="/invoice/list/">Invoice</a></li>
 			 <li><a href="/deposit/add/">Deposit</a></li>
+             <!--
              <li><a href="/service/add/">Service</a></li>
              <li><a href="/repair/add/">Repair</a></li>
              <li><a href="/salary/add/">Salary Advance</a></li>
+             -->
          </ol>
       </li>
       <li>Bills
          <ol>
             <li><a href="/search/cashsales/">Receipt</a></li>
 			<li><a href="/search/invoice/">Invoice and Delivery Order</a></li>
-            <li><a href="/search/imei/">IMEI Search</a></li>
+            <li><a href="/search/imei/">Serial no. Search</a></li>
             <li><a href="/search/deposit/">Deposit</a></li>
+            <!--
             <li><a href="/search/service/">Service</a></li>
             <li><a href="/search/repair/">Repair</a></li>
             <li><a href="/search/salary/">Salary Advance</a></li>
             <li><a href="/search/holdbill/">Hold Bill</a></li>
+            -->
          </ol>
       </li>	  
    </ol>
